补充credit模式